2014-02-20 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFRuntime.c: Do nothing if CFRetain/CFRelease are
	called on small objects.
	* Source/GSObjCRuntime.h: Cast to unsigned int to avoid warning.

2014-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/GSObjCRuntime.h: Check for small objects.

2014-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/CFArray.h,
	* Headers/CoreFoundation/CFBag.h,
	* Headers/CoreFoundation/CFData.h,
	* Headers/CoreFoundation/CFDate.h,
	* Headers/CoreFoundation/CFDictionary.h,
	* Headers/CoreFoundation/CFSet.h,
	* Headers/CoreFoundation/CFURL.h: Do not define CF types as Objective C
	objects.
	* Headers/CoreFoundation/GSCharacter.h: Fix bug in UTF-8 conversion
	function.
	* Source/NSCFArray.m,
	* Source/NSCFData.m,
	* Source/NSCFError.m: Explicitly cast NS to CF objects.

2014-02-16 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/NSCFDictionary.m: Add category to match class definition.
	* Source/NSCFType.m: Use correct number of classes to register.

2014-02-14 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharacter.h: Fix minor compare bug.

2014-02-13 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/GSUnicode.c: Completed isnan/isinf functions for long double.

2014-02-12 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/config.h.in,
	* configure,
	* configure.ac: Correctly handle existence of compatible GCD library.
	* Source/GSUnicode.c: Temperarily disable 96-bit long double error.

2014-01-30 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/config.h.in,
	* configure,
	* configure.ac: Disable check for GCD as it is broken.

2014-12-09 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharUtilities.h: Fixed function case.
	* Source/CFString.c: Use new whitespace function.

2014-12-09 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharUtilities.h: Added whitespace function,