@@ -270,15 +270,8 @@ typedef CFTypeRef CFPropertyListRef;
 /*
  * CFString
  */
-#if __OBJC__
-@class NSString;
-@class NSMutableString;
-typedef NSString * CFStringRef;
-typedef NSMutableString * CFMutableStringRef; 
-#else
 typedef const struct __CFString * CFStringRef;
 typedef struct __CFString * CFMutableStringRef;
-#endif
 
 
 
